feat: Enable adding waypoints by dragging on the map

--- a/web/templates/routes.html
+++ b/web/templates/routes.html
@@ -493,7 +493,7 @@
             waypoints: waypoints,
             routeWhileDragging: true,
             draggableWaypoints: true,
-            addWaypoints: false,  // Disable adding waypoints by clicking on line
+            addWaypoints: true,  // Enable adding waypoints by dragging anywhere on the line
             fitSelectedRoutes: true,
             showAlternatives: false,
             lineOptions: {
