--- a/web/templates/routes.html
+++ b/web/templates/routes.html
@@ -285,6 +285,10 @@
                         <span class="info-label">Stops</span>
                         <span class="info-value">${r.stop_count}</span>
                     </div>
+                    <div class="info-item">
+                        <span class="info-label">Employees</span>
+                        <span class="info-value">${r.employee_count}</span>
+                    </div>
                 </div>
                 <div>
                     <span class="info-label">Employees</span>
