feat: Add cluster management page and integrate cluster data into employee and stats APIs

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -35,6 +35,9 @@
             <a href="/employees" class="nav-item {% if request.endpoint == 'employees_page' %}active{% endif %}">
                 <span class="nav-text">Employees</span>
             </a>
+            <a href="/clusters" class="nav-item {% if request.endpoint == 'clusters_page' %}active{% endif %}">
+                <span class="nav-text">Clusters</span>
+            </a>
             <a href="/routes" class="nav-item {% if request.endpoint == 'routes_page' %}active{% endif %}">
                 <span class="nav-text">Routes</span>
             </a>
