--- a/web/templates/route_edit.html
+++ b/web/templates/route_edit.html
@@ -63,21 +63,21 @@
     }
 
     .btn-success {
-        background: #0bb783;
+        background: var(--color-success);
         color: white;
     }
 
     .btn-success:hover {
-        background: #099268;
+        opacity: 0.9;
     }
 
     .btn-danger {
-        background: #f64e60;
+        background: var(--color-danger);
         color: white;
     }
 
     .btn-danger:hover {
-        background: #d43f51;
+        opacity: 0.9;
     }
 
     .leaflet-routing-container {
